20-Dec-2012 Adding action '-forcedefinitionupdate' which will immediate write out package definition files after they have been read. This can be used to force any updates required in future Opus versions.

16-Dec-2012 Adding support for a package with multiple versions to be valid for a given build (to indicate supported builds). A build must narrow down to a single version though, so a new command Action, <packagename>.version, has been introduced, which can be used to select the version required.

16-Dec-2012 Adding Opus.Core.IActionCommandComparison, for an action that requires a custom command comparison.

27-Nov-2012 Adding in C.ICCompilerOptions.CharacterSet to select the target character set for the compiled code. Support may vary between compilers.

27-Nov-2012 Adding C.IWinImportLibrary interface, that classes implementing C.ILinkerTool also need to implement if they support generating a Windows import library for dynamic libraries.

26-Nov-2012 Adding Opus.Core.Exception constructor that accepts a format string and a variable number of arguments.

25-Nov-2012 Opus.Core.IModule now only lists the required option and proxy path methods/properties. Opus.Core.BaseModule is a new abstract class (implementing IModule) that each module class must now derive from. This allows virtually all of the common methods to be implemented in the base class to simplify the derived module classes. Also, option updates are now performed through a clean interface in user written module instances.

22-Nov-2012 Renamed compiler specific CPlusPlusXYZ classes to CxxXYZ.

22-Nov-2012 Renamed C.ETargetLanguage.CPlusPlus to C.ETargetLanguage.Cxx.

22-Nov-2012 Renamed the namespace C.CPlusPlus to C.Cxx.

22-Nov-2012 C.ICPlusPlusCompilerOptions has been renamed to C.ICxxCompilerOptions.

21-Nov-2012 Exception reporting has been inverted so that the innermost exception is now reported first, alongwith it's callstack. This ensures that the most relevant exception message appears first.
